<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnySoftKeyboard - Hungarian Language Pack</string>
    <string name="hungarian_dictionary">Hungarian (ispell 1.6.1)</string>

    <string name="hungarian_keyboard_qwerty">Hungarian (qwerty)</string>
    <string name="hungarian_keyboard_qwerty_desc">Accented chars in 3 rows with Y in the top row</string>

    <string name="hungarian_keyboard_qwerty_repeat">Hungarian (qwerty/repeat)</string>
    <string name="hungarian_keyboard_qwerty_repeat_desc">Accented chars in 3 rows with Y in the top row repeated keypress to accented chars</string>

    <string name="hungarian_keyboard_qwerty_all">Hungarian (qwerty) full</string>
    <string name="hungarian_keyboard_qwerty_all_desc">All accented chars arranged in 4 rows with Y in the top row</string>

    <string name="hungarian_keyboard_qwertz">Hungarian (qwertz)</string>
    <string name="hungarian_keyboard_qwertz_desc">Accented chars in 3 rows</string>

    <string name="hungarian_keyboard_qwertz_repeat">Hungarian (qwertz/repeat)</string>
    <string name="hungarian_keyboard_qwertz_repeat_desc">Accented chars in 3 rows repeated keypress to accented chars</string>

    <string name="hungarian_keyboard_qwertz_all">Hungarian (qwertz) full</string>
    <string name="hungarian_keyboard_qwertz_all_desc">All accented chars arranged in 4 rows</string>

    <string name="hungarian_keyboard_qwertz_swype">Hungarian (qwertz/clip.)</string>
    <string name="hungarian_keyboard_qwertz_swype_desc">Accented chars in 3 rows plus clipboard buttons</string>

    <string name="hungarian_keyboard_qwertz_swype_repeat">Hungarian (qwertz/clip./repeat)</string>
    <string name="hungarian_keyboard_qwertz_swype_repeat_desc">Accented chars in 3 rows plus clipboard buttons repeated keypress to accented chars</string>

    <string name="hungarian_keyboard_qwerty_swype">Hungarian (qwerty/clip.)</string>
    <string name="hungarian_keyboard_qwerty_swype_desc">Accented chars in 3 rows plus clipboard buttons</string>

    <string name="hungarian_keyboard_qwerty_swype_repeat">Hungarian (qwerty/clip/repeat)</string>
    <string name="hungarian_keyboard_qwerty_swype_repeat_desc">Accented chars in 3 rows plus clipboard buttons repeated keypress to accented chars</string>

    <string name="hungarian_keyboard_yesaku">Hungarian - YESAKU (experimental)</string>
    <string name="hungarian_keyboard_yesaku_desc">Minimizes finger travel (by EclipSim)</string>
    
    <string name="hungarian_keyboard_qwertz_tablet">Hungarian (tablet)</string>
    <string name="hungarian_keyboard_qwertz_tablet_desc">Hungarian layout optimized for tablets</string>
    
    <string name="hungarian_keyboard_qwertz_tablet_split">Hungarian (tablet/split)</string>
    <string name="hungarian_keyboard_qwertz_tablet_split_desc">Hungarian layout optimized for tablet thumb typing in landscape</string>
    
    <string name="hungarian_keyboard_qwerty_tablet">Hungarian (tablet/qwerty)</string>
    <string name="hungarian_keyboard_qwerty_tablet_desc">Hungarian layout optimized for tablets</string>
    
    <string name="hungarian_keyboard_qwerty_tablet_split">Hungarian (tablet/split/qwerty)</string>
    <string name="hungarian_keyboard_qwerty_tablet_split_desc">Hungarian layout optimized for tablet thumb typing in landscape</string>

    <string name="hungarian_keyboard_copy">Copy</string>
    <string name="hungarian_keyboard_cut">Cut</string>
    <string name="hungarian_keyboard_paste">Paste</string>
    <string name="hungarian_keyboard_selectall">Select All</string>
</resources>
